--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <title>React, Flux and GraphQL Demo</title>
 </head>
 
 <body>
-  <div id="container"></div>
+  <div id="container" class="container"></div>
   <script src="/vendor.js"></script>
   <script src="/app.js"></script>
 </body>
